TEST_PROGRAMS/typing_benchmarks/invalid/struct2.go
package main

func main() {
	type t struct {
		a int
		_ int
		a int
	}
}
